...
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Your Feed" image="house.fill" catalog="system" id="acW-dT-cKf"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
        </scene>
        <!--Post View Controller-->
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a9q-Ts-5QY" customClass="postButton" customModule="prototypeChattyFoods" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="WPJ-0A-ipf"/>
                                            <constraint firstAttribute="height" constant="60" id="psq-TO-by6"/>
                                        </constraints>
                                        <state key="normal" image="heart" catalog="system"/>
                                        <state key="selected" image="heart.fill" catalog="system"/>
                                        <connections>
                                            <action selector="likeButtonPressed:" destination="hDW-ld-pii" eventType="touchUpInside" id="r8U-KB-QV5"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUV-Vr-QgA" customClass="postButton" customModule="prototypeChattyFoods" customModuleProvider="target">
...
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Post something" image="plus" catalog="system" id="cPa-gy-q4n"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.27536231884062" y="359.59821428571428"/>
        </scene>
        <!--Your Liked Posts-->
...
                            <constraint firstItem="hku-TR-jPY" firstAttribute="trailing" secondItem="IdV-m7-GSR" secondAttribute="trailing" constant="20" id="Yjg-gd-kBN"/>
                            <constraint firstItem="IdV-m7-GSR" firstAttribute="bottom" secondItem="hku-TR-jPY" secondAttribute="bottom" id="exL-cF-acq"/>
                            <constraint firstItem="IdV-m7-GSR" firstAttribute="top" secondItem="hku-TR-jPY" secondAttribute="top" id="ssh-tH-upE"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hku-TR-jPY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Your Liked Posts" image="heart" catalog="system" id="rQX-Wi-4QD"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bHE-ny-zT4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="766.66666666666674" y="1093.5267857142856"/>
        </scene>
        <!--ChattyFoods-->
...
